# virtualCPU

./: CMakeLists.txt
data/programs/: default.txt  discr.txt  factorial.txt  fibonacci40.txt  program1.txt  program2.txt  rec_fact.txt
lib/: CMakeLists.txt
lib/include/: commands.hpp  exceptions.hpp  parser.hpp  processor.hpp  processor_stack.hpp  program.hpp  stack.hpp  virtual_cpu.hpp
lib/source/: commands.cpp  empty.cpp  parser.cpp  processor.cpp  processor_stack.cpp  program.cpp
lib/test/: program_test.cpp  stack_test.cpp
test/: stack_test.cpp
